<resources>
    <string name="app_name" translatable="false">Pupil J</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="prev" translatable="false">Prev</string>
    <string name="next">Next</string>
    <string name="innovation">Innovation</string>
    <string name="head_screen3">Empowering Educators</string>
    <string name="under_head_screen3">Empowering Educators to Shape the Leaders  of Tomorrow - Welcome to Pupil J</string>
    <string name="head_screen4">Future Of Education</string>
    <string name="under_head_screen4">Unlocking the Future of Education - Welcome  to Pupil J !</string>
    <string name="join_as">Join as</string>
    <string name="parent">Parent</string>
    <string name="teacher">Teacher</string>
    <string name="sign_in">Sign in to</string>
    <string name="under_head_signin">Enter Your ID to proceed</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="my_children">My Children</string>
    <string name="personal_details">Personal Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="log_out">Log Out</string>
    <string name="phone_no">Phone No</string>
    <string name="email">Email</string>
    <string name="account_info">Account Info</string>
    <string name="close">close</string>
    <string name="messages">Messages</string>
    <string name="calender">Calender</string>
    <string name="all_activity">All Activity</string>
    <string name="daily_report">Daily Report</string>
    <string name="setting">Setting</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="change_language">Change language</string>
    <string name="notification">Notification</string>
    <string name="check_in_out">Check In/Out</string>
    <string name="photos_amp_videos"><![CDATA[Photos & Videos]]></string>
    <string name="administrator_home">Administrator Home</string>
    <string name="rooms">Rooms</string>
    <string name="students">Students</string>
    <string name="reminders">Reminders</string>
    <string name="select_a_room">Select a Room</string>
    <string name="back">Back</string>
    <string name="profile_small">profile</string>
    <string name="birthday">Birthday:</string>
    <string name="medications">Medications:</string>
    <string name="allergies">Allergies:</string>
    <string name="ok">ok</string>
    <string name="notes">Notes:</string>
    <string name="contact_info">Contact Info</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="pickup">Pickup</string>
    <string name="food">Food</string>
    <string name="bottle">Bottle</string>
    <string name="all">All</string>
    <string name="most">Most</string>
    <string name="some">Some</string>
    <string name="none">None</string>
    <string name="time">Time :</string>
    <string name="type">Type</string>
    <string name="select_meal_type">Select Meal Type</string>
    <string name="add_activity">Add Activity</string>
    <string name="start_nap">Start Nap</string>
    <string name="end_nap">End Nap</string>
    <string name="sleep_check">Sleep Check</string>
    <string name="diber">Diber</string>
    <string name="potty">Potty</string>
    <string name="accident">Accident</string>
    <string name="nap">Nap</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="note">Note</string>
    <string name="achievement">Achievement</string>
    <string name="custom">Custom</string>
    <string name="meds">Meds</string>
    <string name="nameToFace">Name to Face</string>
    <string name="incidents">Incidents</string>
    <string name="healthCheck">Health Check</string>
    <string name="observation">Observation</string>
    <string name="attendance">Attendance</string>
    <string name="attended">Attended</string>
    <string name="notAttended">Not Attended</string>
    <string name="check_in">Checked in</string>
    <string name="check_out">Checked out</string>
    <string name="meal_items">Meal Items</string>
    <string name="wet">Wet</string>
    <string name="bm">Bm</string>
    <string name="dry">Dry</string>
    <string name="category">Category</string>
    <string name="progress">Progress</string>
    <string name="scale">Scale</string>
    <string name="temp">Temp</string>
    <string name="temperature">Temperature</string>
    <string name="c">C</string>
    <string name="away">Away</string>
    <string name="here">Here</string>
    <string name="name">Name</string>
    <string name="doctor_info">Doctor info</string>
    <string name="address">Address</string>
    <string name="status">Status</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_phone">Doctor Phone</string>
    <string name="address_line_2">Address line 2</string>
    <string name="address_line_1">Address line 1</string>
    <string name="city">City</string>
    <string name="milestones">Milestones</string>
    <string name="staff_only">Staff Only</string>
    <string name="describe_how_can_we_help">Describe how can we help..</string>
    <string name="send">Send</string>
    <string name="title">Title</string>
    <string name="text_head_reminder">You Haven’t Set Any Reminders.</string>
    <string name="text_under_head_reminder">Set a reminder to be notified about diper checks, bottles, meal times.</string>
    <string name="add_a_reminder">Add a reminder</string>
    <string name="create_reminder">Create reminder</string>
    <string name="toilet">Toilet</string>
    <string name="next_reminder">Next Reminder</string>
    <string name="repeat_until_check_out">Repeat Until check-out</string>
    <string name="create_a_reminder">Create a reminder</string>
    <string name="napSmall" translatable="false">nap</string>
    <string name="toiletSmall" translatable="false">toilet</string>
    <string name="noteSmall" translatable="false">note</string>
    <string name="medsSmall" translatable="false">meds</string>
    <string name="diberSmall" translatable="false">diber</string>
    <string name="foodSmall" translatable="false">food</string>
    <string name="underInnovation">Unlock Your Potential with Pupil J -   Where Learning Meets Innovation</string>
    <string name="write_your_message">Write Your Message</string>
</resources>