<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.signin.SignIn"
        android:padding="20dp">

        <ProgressBar
            android:id="@+id/circularProgressIndicator_signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:indicatorDirectionCircular="clockwise"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtHeadSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in"
            android:textColor="@color/canary"
            android:textSize="45sp"
            app:layout_constraintStart_toStartOf="@+id/edtId"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtUnderHeadSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/under_head_signin"
            android:textColor="@color/canary"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/txtHeadSignin"
            app:layout_constraintTop_toBottomOf="@+id/txtHeadSignin" />

        <ImageView
            android:id="@+id/imgSignIn"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="60dp"
            android:scaleType="center"
            android:src="@drawable/img_signin"
            app:layout_constraintBottom_toBottomOf="@+id/txtHeadSignin"
            app:layout_constraintEnd_toEndOf="@+id/edtId"
            app:layout_constraintStart_toEndOf="@+id/txtHeadSignin"
            app:layout_constraintTop_toTopOf="@id/txtHeadSignin" />

        <TextView
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/id"
            android:textColor="@color/textView_color"
            android:textSize="@dimen/head_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtUnderHeadSignin" />

        <EditText
            android:id="@+id/edtId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_edit_text"
            android:inputType="number"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@+id/txtId"
            app:layout_constraintTop_toBottomOf="@+id/txtId" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/textView_color"
            android:textSize="@dimen/head_size"
            app:layout_constraintStart_toStartOf="@id/txtId"
            app:layout_constraintTop_toBottomOf="@id/edtId" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_edit_text"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@+id/edtId"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/head_size"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:background="@drawable/shape_button"
            app:layout_constraintStart_toStartOf="@+id/edtId"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>