<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.joinas.JoinAsFragment">

        <TextView
            android:id="@+id/txtJoinAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/join_as"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toTopOf="@+id/imgTeacher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtJoinAs"
            android:src="@drawable/img_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/imgParent"
            app:layout_constraintEnd_toEndOf="@+id/imgParent"
            app:layout_constraintTop_toTopOf="@+id/imgParent"
            app:layout_constraintBottom_toBottomOf="@+id/imgParent"
            android:textSize="40sp"
            android:text="@string/parent"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imgTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgParent"
            android:src="@drawable/img_teacher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/imgTeacher"
            app:layout_constraintEnd_toEndOf="@+id/imgTeacher"
            app:layout_constraintTop_toTopOf="@+id/imgTeacher"
            app:layout_constraintBottom_toBottomOf="@+id/imgTeacher"
            android:textSize="40sp"
            android:text="@string/teacher"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>